update -contact - Fixing address spacing line among if there is any missing information #ref WTHZONE-924

--- a/src/contact/shared/toolbar/left-menu.component.scss
+++ b/src/contact/shared/toolbar/left-menu.component.scss
@@ -45,3 +45,9 @@ a {
 .show {
   display: inherit;
 }
+
+.new-btn {
+  padding: 8px 15px;
+  font-weight: bold;
+  cursor: pointer;
+}
